Added javadoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,32 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <id>generate-javadoc</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>javadoc-no-fork</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>package-javadoc</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludePackageNames>com.mystic_alchemy.ics2java.sandboxes</excludePackageNames>
+                    <outputDirectory>${project.basedir}/docs</outputDirectory>
+                    <show>public</show>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
