--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,14 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Mystic-Alchemy Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/mystic-alchemy/ics2java</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
