Changed phase for javadoc:jar and sources:jar-no-fork

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                     </execution>
                     <execution>
                         <id>package-javadoc</id>
-                        <phase>verify</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
@@ -87,7 +87,7 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
-                        <phase>verify</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>jar-no-fork</goal>
                         </goals>
