oops... made a mistake...

--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -2,7 +2,7 @@ name: Create a release from artifacts
 
 on:
   push:
-    branches: [main, development]
+    branches: [master, development]
 
 jobs:
   build:
