--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -27,7 +27,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           draft: true
-          prerelease: ${{ ${{ steps.extract_branch.outputs.branch }} == development}}
+          prerelease: ${{ steps.extract_branch.outputs.branch == development}}
           generate_release_notes: true
           body: |
             A new version of ics2java has been released.
