--- a/.github/workflows/maven_publish.yml
+++ b/.github/workflows/maven_publish.yml
@@ -1,10 +1,11 @@
 name: Publish package to GitHub packages
 on:
   release:
-    types: [released]
+    types: [published]
 
 jobs:
   publish:
+    if: "!github.event.release.prerelease"
     runs-on: ubuntu-latest
     permissions:
       contents: read
